Inspection updates.