@@ -12,8 +12,8 @@ public class ValueFileLabel extends JPanel implements ActionListener {
     private final Timer timer = new Timer(1000, this);
     private final JLabel descriptionLabel = new JLabel();
     private final JLabel valueLabel = new JLabel();
-    protected ValueFileIO vfioMonitor;
-    protected boolean showBool;
+    private final ValueFileIO vfioMonitor;
+    private final boolean showBool;
 
     public ValueFileLabel(String description, ValueFileIO vfioMonitor, boolean bool) {
         super(true);
@@ -32,7 +32,7 @@ public class ValueFileLabel extends JPanel implements ActionListener {
 
         try {
             if (showBool)
-                valueLabel.setText(new Boolean(vfioMonitor.read()).toString());
+                valueLabel.setText(Boolean.valueOf(vfioMonitor.read()).toString());
             else
                 valueLabel.setText(vfioMonitor.readDouble() + "");
         } catch (IOException e) {
